# eazyhumn

./: .gitignore
pico/: CMakeLists.txt  main.c  make  upload
pico/test/: make  upload
pico/test/mic/: CMakeLists.txt  main.c
